--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
 /* Import declaration to use Google Fonts - check https://fonts.google.com/ for details */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
+
 /* Styles for the body */
 
 body {
@@ -14,21 +16,25 @@ body {
 /* Styles for custom classes in the document. (There are more, try to find them out!) */
 
 .resume-header {
-    background-color: #e0f0ff;
+    background-color: #FFFFFF;
+}
+
+.title-colour {
+	color: #F6E0E0;
 }
 
 .resume-main {
-	background-color: #fffefc;
+	background-color: #F6E0E0;
 }
 
 .resume-aside {
-	background-color: #fff0e0;
+	background-color: #BACFB7;
 }
 
 /* Styles for lists in the document */
 
 .biography-details li::before, .skill-list li::before {
-	content: ">";
+	content: "•";
 	font-weight: 800;
 	display: inline-block;
 	width: 1em;
@@ -49,3 +55,10 @@ body {
 	height: 1em;
 	flex-basis: 1.4em;
 }
+
+.chewy-regular {
+  font-family: "Chewy", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
